# MobileDogs

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  conf.py  index.rst  main.py  pyproject.toml  requirements.txt  setup.py
MobileDogs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
database/: conect_dogs.py  fast.py  schemas.py
scenaries/: add_collar.py  add_coordinate.py  add_task.py  add_user.py  all_dogs_collars.py  collar_delete.py  collar_update.py  delete_coordinate.py  delete_task.py  task_update.py  track.py  update_coordinate.py  update_user.py  user_delete.py
src/: README.md  conf.py  database.md  database.py  database_manager.py  main.py  requirements.txt
src/devices/: devices.md  models.py  router.py  schemas.py
src/log/: log_devices.py  log_tasks.py  log_users.py
src/tasks/: moduls.py  router.py  schemas.py  tasks.md
src/users/: models.py  router.py  schemas.py  users.md
