[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MobileDogs"
authors = [{name = "Kuzmin Ilia", email = "saharokbro@mail.ru"},
          {name = "Nikiforova Darya", email = "darya.n.2004@mail.ru"}]
dynamic = ["version"]
description = "The Mobile Dogs project is a system for tracking stray dogs using wearable devices (collars)."
readme = "README.md"
icense = {file = "LICENSE"}
